--- a/Examples/ROServer/ROServer/Base.lproj/Main.storyboard
+++ b/Examples/ROServer/ROServer/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RtT-Wj-SOm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RtT-Wj-SOm">
     <device id="ipad9_7" orientation="landscape" layout="fullscreen" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,7 +14,7 @@
             <objects>
                 <navigationController id="RtT-Wj-SOm" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Xko-ce-XCb">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="50"/>
+                        <rect key="frame" x="0.0" y="20" width="1024" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -33,10 +34,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="vnv-BV-aR4">
-                                <rect key="frame" x="0.0" y="50" width="1024" height="718"/>
+                                <rect key="frame" x="0.0" y="70" width="1024" height="698"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="Itu-Op-AKG">
-                                        <rect key="frame" x="0.0" y="0.0" width="682" height="718"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="682" height="698"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dSs-uT-6Pj">
                                                 <rect key="frame" x="0.0" y="0.0" width="682" height="32"/>
@@ -75,7 +76,7 @@
                                                             <constraint firstAttribute="width" constant="32" id="BCW-eg-xJO"/>
                                                             <constraint firstAttribute="height" constant="32" id="Lgj-bO-TGz"/>
                                                         </constraints>
-                                                        <state key="normal" image="rectangle.topthird.inset" catalog="system"/>
+                                                        <state key="normal" image="rectangle.topthird.inset.filled" catalog="system"/>
                                                         <connections>
                                                             <action selector="showHideLoginTerminal:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NDF-qs-9iq"/>
                                                         </connections>
@@ -95,11 +96,11 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lKJ-co-Rky">
-                                                <rect key="frame" x="0.0" y="33" width="682" height="205.5"/>
+                                                <rect key="frame" x="0.0" y="33" width="682" height="199"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iM3-Jd-0O0">
-                                                <rect key="frame" x="0.0" y="239.5" width="682" height="32"/>
+                                                <rect key="frame" x="0.0" y="233" width="682" height="32"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHAR SERVER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="imp-s6-kMp">
                                                         <rect key="frame" x="8" y="9.5" width="76.5" height="13.5"/>
@@ -135,7 +136,7 @@
                                                             <constraint firstAttribute="height" constant="32" id="aDe-gQ-6c2"/>
                                                             <constraint firstAttribute="width" constant="32" id="iew-TD-arL"/>
                                                         </constraints>
-                                                        <state key="normal" image="rectangle.topthird.inset" catalog="system"/>
+                                                        <state key="normal" image="rectangle.topthird.inset.filled" catalog="system"/>
                                                         <connections>
                                                             <action selector="showHideCharTerminal:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2M5-Fd-Dsg"/>
                                                         </connections>
@@ -156,14 +157,14 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eXj-qx-74z">
-                                                <rect key="frame" x="0.0" y="272.5" width="682" height="206"/>
+                                                <rect key="frame" x="0.0" y="266" width="682" height="199"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XiJ-qZ-TkO">
-                                                <rect key="frame" x="0.0" y="479.5" width="682" height="32"/>
+                                                <rect key="frame" x="0.0" y="466" width="682" height="32"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MAP SERVER" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2I5-CK-0AR">
-                                                        <rect key="frame" x="8" y="9" width="69.5" height="13.5"/>
+                                                        <rect key="frame" x="8" y="9.5" width="69.5" height="13.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -196,7 +197,7 @@
                                                             <constraint firstAttribute="width" constant="32" id="kam-jq-8mR"/>
                                                             <constraint firstAttribute="height" constant="32" id="tEc-pu-Th2"/>
                                                         </constraints>
-                                                        <state key="normal" image="rectangle.topthird.inset" catalog="system"/>
+                                                        <state key="normal" image="rectangle.topthird.inset.filled" catalog="system"/>
                                                         <connections>
                                                             <action selector="showHideMapTerminal:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qzg-md-tYE"/>
                                                         </connections>
@@ -217,7 +218,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mRx-fd-mwG">
-                                                <rect key="frame" x="0.0" y="512.5" width="682" height="205.5"/>
+                                                <rect key="frame" x="0.0" y="499" width="682" height="199"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             </view>
                                         </subviews>
@@ -228,7 +229,7 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="YaH-kh-t4D">
-                                        <rect key="frame" x="683" y="0.0" width="341" height="718"/>
+                                        <rect key="frame" x="683" y="0.0" width="341" height="698"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hTD-zx-kSl">
                                                 <rect key="frame" x="0.0" y="0.0" width="341" height="32"/>
@@ -256,7 +257,7 @@
                                                             <constraint firstAttribute="width" constant="32" id="LXw-1R-fF9"/>
                                                             <constraint firstAttribute="height" constant="32" id="cJj-XK-0og"/>
                                                         </constraints>
-                                                        <state key="normal" image="rectangle.rightthird.inset.fill" catalog="system"/>
+                                                        <state key="normal" image="rectangle.rightthird.inset.filled" catalog="system"/>
                                                         <connections>
                                                             <action selector="showHideSessionsTerminal:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FrP-TK-y7P"/>
                                                         </connections>
@@ -274,7 +275,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Psg-7b-gzv">
-                                                <rect key="frame" x="0.0" y="33" width="341" height="685"/>
+                                                <rect key="frame" x="0.0" y="33" width="341" height="665"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             </view>
                                         </subviews>
@@ -314,10 +315,10 @@
         </scene>
     </scenes>
     <resources>
-        <image name="play" catalog="system" width="120" height="128"/>
-        <image name="rectangle.rightthird.inset.fill" catalog="system" width="128" height="93"/>
-        <image name="rectangle.topthird.inset" catalog="system" width="128" height="93"/>
-        <image name="trash" catalog="system" width="121" height="128"/>
+        <image name="play" catalog="system" width="117" height="128"/>
+        <image name="rectangle.rightthird.inset.filled" catalog="system" width="128" height="93"/>
+        <image name="rectangle.topthird.inset.filled" catalog="system" width="128" height="93"/>
+        <image name="trash" catalog="system" width="117" height="128"/>
         <systemColor name="secondarySystemBackgroundColor">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
